<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_app_background_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/base_10"
            android:paddingBottom="@dimen/base_10"
            android:text="@string/sub_consultant_name"
            android:textColor="@color/base_black"
            android:textSize="@dimen/base_font_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/base_10"
            android:paddingBottom="@dimen/base_10"
            android:text="@string/sub_the_number_of_defeats_this_month"
            android:textColor="@color/base_black"
            android:textSize="@dimen/base_font_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/base_10"
            android:paddingBottom="@dimen/base_10"
            android:text="@string/sub_number_of_pending_audits"
            android:textColor="@color/base_black"
            android:textSize="@dimen/base_font_size"
            android:textStyle="bold" />

    </LinearLayout>

    <View style="@style/Base_Simple_Line_Style" />

    <com.krt.frame.pullrecyclerview.AutoSwipeRefreshView
        android:id="@+id/base_lceRefreshView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/base_lceRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never" />

    </com.krt.frame.pullrecyclerview.AutoSwipeRefreshView>

</LinearLayout>